add Timer
