# src/models/timer.js
@@ -1,0 +1,15 @@
+const mongoose = require("mongoose");
+const Schema = mongoose.Schema;
+
+const timerSchema = new mongoose.Schema({
+  startDate: String,
+  endDate: String,
+  startTime: String,
+  endTime: String,
+  task: { type: Schema.Types.ObjectId, ref: 'Task' },
+  user:{ type: Schema.Types.ObjectId, ref: 'User' }
+});
+
+const timerModel = mongoose.model("Timer", timerSchema);
+
+module.exports = timerModel;
